# DrRepo

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DrRepo-MasterPlan.md  PROJECT_BLUEPRINT.md  ROADMAP.md
drrepo/: audit.py  cli.py
drrepo/advisor/: __init__.py  api_schema.py  llm_contract.py  llm_http.py  llm_providers.py  llm_router.py  llm_smoke.py  priorities.py  profiles.py  prompting.py  reporting.py  service.py
drrepo/analyzers/: __init__.py  bandit_runner.py  coverage_runner.py  models.py  pytest_runner.py  radon_runner.py  readme_auditor.py  repository_service.py  ruff_runner.py  (+3 more)
tests/: __init__.py  test_advisor_api_schema.py  test_advisor_profiles.py  test_advisor_prompting.py  test_advisor_reporting.py  test_advisor_service.py  test_analyzer_models.py  test_analyzer_service.py  test_audit.py  test_audit_dataset_export.py  test_bandit_runner.py  test_baseline_classifier.py  test_baseline_evaluation.py  test_cli.py  test_cli_ai_advisor.py  test_cli_github_url.py  test_cli_profile_advisor.py  test_coverage_runner.py  test_dataset_artifacts.py  test_dataset_builder.py  test_dataset_quality.py  test_dataset_records.py  test_dataset_splits.py  test_diagnosis_engine.py  test_evaluation_metrics.py  test_feature_builder.py  test_feature_schema.py  test_git_input.py  test_labeling_rubric.py  test_leakage_checks.py  test_llm_config.py  test_llm_contract.py  test_llm_http_adapters.py  test_llm_providers.py  test_llm_router.py  test_llm_smoke.py  test_markdown_report.py  test_ml_labels.py  test_package_imports.py  test_packaging.py  (+19 more)
(+40 files in other folders)
