[project]
name = "drrepo"
version = "0.1.0"
description = "DrRepo - a Python repository audit tool (initial skeleton)"
requires-python = ">=3.11"
dependencies = ["typer>=0.12.0"]

[project.optional-dependencies]
dev = [
	"pytest>=8.0.0",
	"ruff",
	"bandit",
	"radon",
	"coverage",
]

[project.scripts]
drrepo = "drrepo.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["drrepo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
